Bug 359487 - can't import java classes that have the same name as it's package. Only the package is shown and also causes a crash.
Summary: can't import java classes that have the same name as it's package. Only the p...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.15.3 (KDE Applications 14.12.3)
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-17 05:56 UTC by tyson.buzza
Modified: 2017-01-10 17:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.21.2 (KDE Applications 16.12.2)
Sentry Crash Report:


Attachments
test case (45 bytes, text/x-java-source)
2017-01-10 17:06 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tyson.buzza 2016-02-17 05:56:14 UTC
See above.

Reproducible: Always

Steps to Reproduce:
1.Create Java class with the same name as it's package.
2.Import class into Umbrello
3.Class represented as a package
4.After some time spent trying to add the class to the diagram Umbrello will crash.

Actual Results:  
Crash

Expected Results:  
Represent the class as a class, not a package.
Comment 1 Ralf Habacker 2016-12-06 14:37:10 UTC
Would be nice to get a stack trace.
Comment 2 Ralf Habacker 2017-01-10 17:06:52 UTC
Created attachment 103332 [details]
test case
Comment 3 Ralf Habacker 2017-01-10 17:32:18 UTC
Git commit d6a53823f69f958e0d5e560ee510b8ee4ab0a8d5 by Ralf Habacker.
Committed on 10/01/2017 at 17:32.
Pushed by habacker into branch 'Applications/16.12'.

Fix `Can't import java classes that have the same name as it's package`.
FIXED-IN:2.21.2 (KDE Applications 16.12.2)

M  +8    -0    umbrello/codeimport/javaimport.cpp

https://commits.kde.org/umbrello/d6a53823f69f958e0d5e560ee510b8ee4ab0a8d5