Fix `Can't import java classes that have the same name as it's package`.

BUG:359487
FIXED-IN:2.21.2 (KDE Applications 16.12.2)